fix: profile__subtitle letter-spacing must be default

--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -12,6 +12,5 @@
     padding: 9px 0 0;
     font-size: 14px;
     line-height: 17px;
-    letter-spacing: .5px;
   }
 }
